[package]
name = "n0-qlog"
version = "0.1.1"
description = "qlog data model for QUIC and HTTP/3"
repository = "https://github.com/n0-computer/n0-qlog.git"
authors = ["n0 team <hello@n0.computer>", "Lucas Pardue <lucas@lucaspardue.com>"]
edition = "2024"
rust-version = "1.88"
license = "BSD-2-Clause"
keywords = ["quic", "http3", "qlog"]
categories = ["network-programming"]
readme = "README.md"

[dependencies]
humantime = { version = "2" }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
serde_with = { version = "3.3", default-features = false, features = ["macros"] }
smallvec = { version = "1", default-features = false, features = ["serde"] }
strum = { version = "0.28", features = ["derive"] }

[dev-dependencies]
pretty_assertions = "1.4"
