[package]
name = "n0-qlog"
version = "0.1.1"
description = "qlog data model for QUIC and HTTP/3"
repository = "https://github.com/n0-computer/n0-qlog.git"
authors = ["n0 team <hello@n0.computer>", "Lucas Pardue <lucas@lucaspardue.com>"]
edition = "2024"
rust-version = "1.88"
license = "BSD-2-Clause"
keywords = ["quic", "http3", "qlog"]
categories = ["network-programming"]
readme = "README.md"

[features]
# Enable gzip compression / decompression of qlog streams via
# [`flate2`]. Used by [`writer::make_qlog_writer`] and
# [`reader::QlogSeqReader::with_file`].
gzip = ["dep:flate2"]

# Enable zstd compression / decompression of qlog streams via
# [`zstd`]. Pulls in `zstd-sys` (C dependency). Used by
# [`writer::make_qlog_writer`] and
# [`reader::QlogSeqReader::with_file`].
zstd = ["dep:zstd"]

[dependencies]
humantime = { version = "2" }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
serde_with = { version = "3.3", default-features = false, features = ["macros"] }
strum = { version = "0.28", features = ["derive"] }

# Optional: gzip backend for the `gzip` feature. Uses `flate2`'s
# default backend (pure-Rust `miniz_oxide`); consumers can select a
# different backend by depending on `flate2` themselves.
flate2 = { version = "1", optional = true }

# Optional: zstd backend for the `zstd` feature. Depends on
# `zstd-sys` (C).
zstd = { version = "0.13", default-features = false, optional = true }

[dev-dependencies]
pretty_assertions = "1.4"
tempfile = "3"
